; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_expr_shift.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_expr_shift.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tok = common dso_local global i64 0, align 8
@TOK_SHL = common dso_local global i64 0, align 8
@TOK_SAR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @expr_shift to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expr_shift() #0 {
  %1 = call i32 (...) @expr_sum()
  br label %2

2:                                                ; preds = %12, %0
  %3 = load i64, i64* @tok, align 8
  %4 = load i64, i64* @TOK_SHL, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %10, label %6

6:                                                ; preds = %2
  %7 = load i64, i64* @tok, align 8
  %8 = load i64, i64* @TOK_SAR, align 8
  %9 = icmp eq i64 %7, %8
  br label %10

10:                                               ; preds = %6, %2
  %11 = phi i1 [ true, %2 ], [ %9, %6 ]
  br i1 %11, label %12, label %15

12:                                               ; preds = %10
  %13 = call i32 (...) @next()
  %14 = call i32 (...) @expr_sum()
  br label %2

15:                                               ; preds = %10
  ret void
}

declare dso_local i32 @expr_sum(...) #1

declare dso_local i32 @next(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
